# lucidum

./: .cursorrules  CV.md  FORK.md  Makefile  PRD.md  README.md  README_BOT.md  bot.py  debug_server.py  pyproject.toml  pyrightconfig.json  test_final.py  test_integration.py  test_quick.py  test_simple.py
cover_letter/: __init__.py  analyzer.py  generator.py  models.py  prompt_builder.py  prompts.py  roles.py  validator.py
data/: resumes.json
docs/: COVER_LETTER.md  COVER_LETTER_CRETERIA.md  COVER_LETTER_IMPROVEMENT_PLAN.md  DEBUG_SERVER.md  ROLES.md  SIMPLE_PRD.md  SIMPLIFIED_SYSTEM.md  THODS.md
static/: debug.js  index.html  styles.css
test_data/: CV.md  VACANCY.md  resume_example.md
tests/: README.md  REFACTORING_SUMMARY.md  conftest.py
tests/test_cover_letter/: test_analyzer.py  test_basic.py  test_integration.py  test_models.py  test_prompt_builder.py  test_roles.py
