[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lucidum"
version = "0.1.0"
description = "Telegram bot for resume management and cover letter generation"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[tool.setuptools.packages.find]
include = ["cover_letter*"] 

[dependency-groups]
dev = [
    "basedpyright>=1.31.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "python-lsp-server>=1.13.0",
    "ruff>=0.12.4",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]

[tool.basedpyright]
include = ["*.py"]
exclude = ["**/__pycache__"]
reportImplicitStringConcatenation = false
reportUnknownMemberType = false
reportAny = false
pythonVersion = "3.10"
typeCheckingMode = "standard"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]  # Removed "I" to disable import sorting
ignore = ["E501"]  # Line too long
